--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <p>很高兴你来到这里, 你可以在以下的网站找到我</p>
 
 <ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
+  <li> <a href="https://space.bilibili.com/291518867?spm_id_from=333.851.b_696e7465726e6174696f6e616c486561646572.10">bilibili</a> </li>
   <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
 </ul>
